--- a/widgets_ui/guide_assembly.ui
+++ b/widgets_ui/guide_assembly.ui
@@ -28,24 +28,19 @@
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QCommandLinkButton" name="CallEXPERT">
+   <widget class="QWebView" name="previous_elogs">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>270</y>
-      <width>141</width>
-      <height>41</height>
+      <x>10</x>
+      <y>10</y>
+      <width>441</width>
+      <height>301</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">font: 11pt &quot;Ubuntu&quot;;</string>
-    </property>
-    <property name="text">
-     <string>Call an Expert </string>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../../Icons/technical-support-customer-service-computer-icons-call-center.jpg</normaloff>../../Icons/technical-support-customer-service-computer-icons-call-center.jpg</iconset>
+    <property name="url">
+     <url>
+      <string>about:blank</string>
+     </url>
     </property>
    </widget>
   </widget>
@@ -55,7 +50,7 @@
      <x>80</x>
      <y>100</y>
      <width>471</width>
-     <height>321</height>
+     <height>521</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -70,7 +65,7 @@
       <x>10</x>
       <y>10</y>
       <width>451</width>
-      <height>301</height>
+      <height>501</height>
      </rect>
     </property>
     <widget class="QWidget" name="verticalStackedWidgetPage1">
@@ -99,10 +94,10 @@
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>1060</x>
      <y>450</y>
-     <width>1441</width>
-     <height>171</height>
+     <width>461</width>
+     <height>131</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -116,8 +111,8 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>1421</width>
-      <height>151</height>
+      <width>441</width>
+      <height>111</height>
      </rect>
     </property>
     <property name="html">
@@ -125,18 +120,16 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Cantarell'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Ubuntu'; font-size:12pt; font-style:italic; color:#888a85;&quot;&gt;     &lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Ubuntu'; font-size:12pt; font-style:italic; color:#888a85;&quot;&gt;     Keep Track of your work ...&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Ubuntu'; font-size:12pt; font-style:italic; color:#888a85;&quot;&gt;    Write your Elog down before your proceed please !&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
   </widget>
   <widget class="QCommandLinkButton" name="proceed_button">
    <property name="geometry">
     <rect>
-     <x>1430</x>
-     <y>640</y>
-     <width>91</width>
+     <x>1360</x>
+     <y>660</y>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -144,7 +137,7 @@ p, li { white-space: pre-wrap; }
     <string notr="true">font: 11pt &quot;Ubuntu&quot;;</string>
    </property>
    <property name="text">
-    <string>Proceed</string>
+    <string>Save and proceed</string>
    </property>
   </widget>
   <widget class="QFrame" name="FreeCADGIF">
@@ -153,7 +146,7 @@ p, li { white-space: pre-wrap; }
      <x>570</x>
      <y>100</y>
      <width>471</width>
-     <height>321</height>
+     <height>521</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -168,7 +161,7 @@ p, li { white-space: pre-wrap; }
       <x>10</x>
       <y>10</y>
       <width>451</width>
-      <height>301</height>
+      <height>501</height>
      </rect>
     </property>
     <widget class="QWidget" name="verticalStackedWidget_2Page1">
@@ -205,8 +198,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QPushButton" name="add_elog_entry">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>640</y>
+     <x>1060</x>
+     <y>590</y>
      <width>121</width>
      <height>27</height>
     </rect>
@@ -215,7 +208,40 @@ p, li { white-space: pre-wrap; }
     <string>add log entry</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="call_expert">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>630</y>
+     <width>201</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Contact an expert</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="cancel">
+   <property name="geometry">
+    <rect>
+     <x>700</x>
+     <y>630</y>
+     <width>201</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Cancel operation</string>
+   </property>
+  </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QWebView</class>
+   <extends>QWidget</extends>
+   <header location="global">QtWebKitWidgets/QWebView</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
